--- a/LF_lastminute/Lastminute.com Group - DataLab Demo.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo.ipynb
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 66,
    "metadata": {
     "collapsed": false
    },
@@ -339,62 +339,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>109</th>\n",
-       "      <td>bravolfly</td>\n",
-       "      <td>Exact</td>\n",
-       "      <td>14</td>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>427</th>\n",
-       "      <td>brafofly</td>\n",
-       "      <td>Exact</td>\n",
-       "      <td>20</td>\n",
-       "      <td>16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>907</th>\n",
-       "      <td>+Bravofly</td>\n",
-       "      <td>Broad</td>\n",
-       "      <td>14</td>\n",
-       "      <td>13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24453</th>\n",
-       "      <td>bravo air</td>\n",
-       "      <td>Exact</td>\n",
-       "      <td>18</td>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24562</th>\n",
-       "      <td>bravo flights</td>\n",
-       "      <td>Exact</td>\n",
-       "      <td>20</td>\n",
-       "      <td>17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24707</th>\n",
-       "      <td>flybravo</td>\n",
-       "      <td>Exact</td>\n",
-       "      <td>21</td>\n",
-       "      <td>16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25387</th>\n",
-       "      <td>bravolfy</td>\n",
-       "      <td>Exact</td>\n",
-       "      <td>21</td>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>47410</th>\n",
-       "      <td>bravoly</td>\n",
-       "      <td>Exact</td>\n",
-       "      <td>23</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>48035</th>\n",
        "      <td>bravo fly</td>\n",
        "      <td>Exact</td>\n",
@@ -402,10 +346,38 @@
        "      <td>25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>143450</th>\n",
+       "      <td>bravo flight</td>\n",
+       "      <td>Exact</td>\n",
+       "      <td>24</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119134</th>\n",
+       "      <td>bravoflight</td>\n",
+       "      <td>Exact</td>\n",
+       "      <td>24</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>166617</th>\n",
+       "      <td>bravofl</td>\n",
+       "      <td>Exact</td>\n",
+       "      <td>25</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>49378</th>\n",
        "      <td>brovofly</td>\n",
        "      <td>Exact</td>\n",
        "      <td>21</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>142612</th>\n",
+       "      <td>www bravofly com</td>\n",
+       "      <td>Exact</td>\n",
+       "      <td>22</td>\n",
        "      <td>18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -416,88 +388,11 @@
        "      <td>18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>72663</th>\n",
-       "      <td>easyjet</td>\n",
-       "      <td>Exact</td>\n",
-       "      <td>12</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>72859</th>\n",
-       "      <td>bravofly</td>\n",
-       "      <td>Exact</td>\n",
-       "      <td>13</td>\n",
-       "      <td>13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>74120</th>\n",
-       "      <td>bravofy</td>\n",
-       "      <td>Exact</td>\n",
-       "      <td>18</td>\n",
-       "      <td>14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95169</th>\n",
-       "      <td>Bravofly</td>\n",
-       "      <td>Phrase</td>\n",
-       "      <td>12</td>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95535</th>\n",
-       "      <td>bravoflay</td>\n",
+       "      <th>47410</th>\n",
+       "      <td>bravoly</td>\n",
        "      <td>Exact</td>\n",
        "      <td>23</td>\n",
-       "      <td>17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>118746</th>\n",
-       "      <td>lastminute</td>\n",
-       "      <td>Exact</td>\n",
-       "      <td>15</td>\n",
-       "      <td>15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>119056</th>\n",
-       "      <td>beavofly</td>\n",
-       "      <td>Exact</td>\n",
-       "      <td>14</td>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>119134</th>\n",
-       "      <td>bravoflight</td>\n",
-       "      <td>Exact</td>\n",
-       "      <td>24</td>\n",
-       "      <td>20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>119586</th>\n",
-       "      <td>bravifly</td>\n",
-       "      <td>Exact</td>\n",
-       "      <td>19</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>122794</th>\n",
-       "      <td>easy jet</td>\n",
-       "      <td>Exact</td>\n",
-       "      <td>13</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>142612</th>\n",
-       "      <td>www bravofly com</td>\n",
-       "      <td>Exact</td>\n",
-       "      <td>22</td>\n",
        "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>142642</th>\n",
-       "      <td>brvofly</td>\n",
-       "      <td>Exact</td>\n",
-       "      <td>22</td>\n",
-       "      <td>13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>143051</th>\n",
@@ -507,46 +402,18 @@
        "      <td>17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>143450</th>\n",
-       "      <td>bravo flight</td>\n",
+       "      <th>95535</th>\n",
+       "      <td>bravoflay</td>\n",
        "      <td>Exact</td>\n",
-       "      <td>24</td>\n",
-       "      <td>21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>143822</th>\n",
-       "      <td>last minute</td>\n",
-       "      <td>Exact</td>\n",
-       "      <td>16</td>\n",
-       "      <td>15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>144865</th>\n",
-       "      <td>bravo fly</td>\n",
-       "      <td>Phrase</td>\n",
+       "      <td>23</td>\n",
        "      <td>17</td>\n",
-       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>166137</th>\n",
-       "      <td>bravfly</td>\n",
+       "      <th>24562</th>\n",
+       "      <td>bravo flights</td>\n",
        "      <td>Exact</td>\n",
        "      <td>20</td>\n",
-       "      <td>13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>166274</th>\n",
-       "      <td>www bravofly com flights</td>\n",
-       "      <td>Exact</td>\n",
-       "      <td>15</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>166617</th>\n",
-       "      <td>bravofl</td>\n",
-       "      <td>Exact</td>\n",
-       "      <td>25</td>\n",
-       "      <td>19</td>\n",
+       "      <td>17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>167162</th>\n",
@@ -556,11 +423,46 @@
        "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>189940</th>\n",
-       "      <td>fly bravo</td>\n",
+       "      <th>427</th>\n",
+       "      <td>brafofly</td>\n",
+       "      <td>Exact</td>\n",
+       "      <td>20</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24707</th>\n",
+       "      <td>flybravo</td>\n",
+       "      <td>Exact</td>\n",
+       "      <td>21</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>118746</th>\n",
+       "      <td>lastminute</td>\n",
+       "      <td>Exact</td>\n",
+       "      <td>15</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>143822</th>\n",
+       "      <td>last minute</td>\n",
        "      <td>Exact</td>\n",
        "      <td>16</td>\n",
-       "      <td>12</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>74120</th>\n",
+       "      <td>bravofy</td>\n",
+       "      <td>Exact</td>\n",
+       "      <td>18</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>144865</th>\n",
+       "      <td>bravo fly</td>\n",
+       "      <td>Phrase</td>\n",
+       "      <td>17</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>190464</th>\n",
@@ -570,11 +472,25 @@
        "      <td>13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>192690</th>\n",
-       "      <td>bravo fly com</td>\n",
+       "      <th>142642</th>\n",
+       "      <td>brvofly</td>\n",
        "      <td>Exact</td>\n",
-       "      <td>15</td>\n",
-       "      <td>11</td>\n",
+       "      <td>22</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>166137</th>\n",
+       "      <td>bravfly</td>\n",
+       "      <td>Exact</td>\n",
+       "      <td>20</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>907</th>\n",
+       "      <td>+Bravofly</td>\n",
+       "      <td>Broad</td>\n",
+       "      <td>14</td>\n",
+       "      <td>13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>195409</th>\n",
@@ -583,93 +499,87 @@
        "      <td>13</td>\n",
        "      <td>13</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72859</th>\n",
+       "      <td>bravofly</td>\n",
+       "      <td>Exact</td>\n",
+       "      <td>13</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72663</th>\n",
+       "      <td>easyjet</td>\n",
+       "      <td>Exact</td>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                        Criteria KeywordMatchType  NbOfAccounts  \\\n",
-       "109                    bravolfly            Exact            14   \n",
-       "427                     brafofly            Exact            20   \n",
-       "907                    +Bravofly            Broad            14   \n",
-       "24453                  bravo air            Exact            18   \n",
-       "24562              bravo flights            Exact            20   \n",
-       "24707                   flybravo            Exact            21   \n",
-       "25387                   bravolfy            Exact            21   \n",
-       "47410                    bravoly            Exact            23   \n",
-       "48035                  bravo fly            Exact            27   \n",
-       "49378                   brovofly            Exact            21   \n",
-       "49679                   Bravofly            Exact            18   \n",
-       "72663                    easyjet            Exact            12   \n",
-       "72859                   bravofly            Exact            13   \n",
-       "74120                    bravofy            Exact            18   \n",
-       "95169                   Bravofly           Phrase            12   \n",
-       "95535                  bravoflay            Exact            23   \n",
-       "118746                lastminute            Exact            15   \n",
-       "119056                  beavofly            Exact            14   \n",
-       "119134               bravoflight            Exact            24   \n",
-       "119586                  bravifly            Exact            19   \n",
-       "122794                  easy jet            Exact            13   \n",
-       "142612          www bravofly com            Exact            22   \n",
-       "142642                   brvofly            Exact            22   \n",
-       "143051              www bravofly            Exact            20   \n",
-       "143450              bravo flight            Exact            24   \n",
-       "143822               last minute            Exact            16   \n",
-       "144865                 bravo fly           Phrase            17   \n",
-       "166137                   bravfly            Exact            20   \n",
-       "166274  www bravofly com flights            Exact            15   \n",
-       "166617                   bravofl            Exact            25   \n",
-       "167162              bravofly.com            Exact            17   \n",
-       "189940                 fly bravo            Exact            16   \n",
-       "190464                  barvofly            Exact            21   \n",
-       "192690             bravo fly com            Exact            15   \n",
-       "195409                 Eurowings            Exact            13   \n",
+       "                Criteria KeywordMatchType  NbOfAccounts  \\\n",
+       "48035          bravo fly            Exact            27   \n",
+       "143450      bravo flight            Exact            24   \n",
+       "119134       bravoflight            Exact            24   \n",
+       "166617           bravofl            Exact            25   \n",
+       "49378           brovofly            Exact            21   \n",
+       "142612  www bravofly com            Exact            22   \n",
+       "49679           Bravofly            Exact            18   \n",
+       "47410            bravoly            Exact            23   \n",
+       "143051      www bravofly            Exact            20   \n",
+       "95535          bravoflay            Exact            23   \n",
+       "24562      bravo flights            Exact            20   \n",
+       "167162      bravofly.com            Exact            17   \n",
+       "427             brafofly            Exact            20   \n",
+       "24707           flybravo            Exact            21   \n",
+       "118746        lastminute            Exact            15   \n",
+       "143822       last minute            Exact            16   \n",
+       "74120            bravofy            Exact            18   \n",
+       "144865         bravo fly           Phrase            17   \n",
+       "190464          barvofly            Exact            21   \n",
+       "142642           brvofly            Exact            22   \n",
+       "166137           bravfly            Exact            20   \n",
+       "907            +Bravofly            Broad            14   \n",
+       "195409         Eurowings            Exact            13   \n",
+       "72859           bravofly            Exact            13   \n",
+       "72663            easyjet            Exact            12   \n",
        "\n",
        "        NbOfAccountsWithClicks  \n",
-       "109                         11  \n",
-       "427                         16  \n",
-       "907                         13  \n",
-       "24453                       11  \n",
-       "24562                       17  \n",
-       "24707                       16  \n",
-       "25387                       11  \n",
-       "47410                       18  \n",
        "48035                       25  \n",
-       "49378                       18  \n",
-       "49679                       18  \n",
-       "72663                       12  \n",
-       "72859                       13  \n",
-       "74120                       14  \n",
-       "95169                       11  \n",
-       "95535                       17  \n",
-       "118746                      15  \n",
-       "119056                      11  \n",
-       "119134                      20  \n",
-       "119586                      12  \n",
-       "122794                      12  \n",
-       "142612                      18  \n",
-       "142642                      13  \n",
-       "143051                      17  \n",
        "143450                      21  \n",
-       "143822                      15  \n",
-       "144865                      14  \n",
-       "166137                      13  \n",
-       "166274                      12  \n",
+       "119134                      20  \n",
        "166617                      19  \n",
+       "49378                       18  \n",
+       "142612                      18  \n",
+       "49679                       18  \n",
+       "47410                       18  \n",
+       "143051                      17  \n",
+       "95535                       17  \n",
+       "24562                       17  \n",
        "167162                      16  \n",
-       "189940                      12  \n",
+       "427                         16  \n",
+       "24707                       16  \n",
+       "118746                      15  \n",
+       "143822                      15  \n",
+       "74120                       14  \n",
+       "144865                      14  \n",
        "190464                      13  \n",
-       "192690                      11  \n",
-       "195409                      13  "
+       "142642                      13  \n",
+       "166137                      13  \n",
+       "907                         13  \n",
+       "195409                      13  \n",
+       "72859                       13  \n",
+       "72663                       12  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[df['NbOfAccountsWithClicks'] > 10]"
+    "df[df['NbOfAccountsWithClicks'] > 10].sort_values(by=['NbOfAccountsWithClicks'],ascending=False)[:25]"
    ]
   },
   {
@@ -680,7 +590,23 @@
    },
    "outputs": [],
    "source": [
-    "df[df['NbOfAccountsWithClicks']>1].hist(column='NbOfAccountsWithClicks')"
+    "%sql\n",
+    "SELECT\n",
+    "  Criteria,\n",
+    "  KeywordMatchType,\n",
+    "  AccountDescriptiveName,\n",
+    "  CampaignName,\n",
+    "  AdGroupName\n",
+    "  IF(CriteriaDestinationUrl != ' --',CriteriaDestinationUrl,FinalUrls) as Urls,\n",
+    "  SUM(Clicks) as Clicks,\n",
+    "FROM\n",
+    " [google.com:ddm-connectors-demo:aw_dataset.KEYWORDS_PERFORMANCE_ANALYTICS]\n",
+    "WHERE True\n",
+    "AND  AdNetworkType2 = 'Google search' \n",
+    "AND NOT IsNegative \n",
+    "AND Status = 'enabled' AND AdGroupStatus = 'enabled' AND CampaignStatus = 'enabled'\n",
+    "AND Month = '2016-04-01'\n",
+    "GROUP BY 1,2,3,4"
    ]
   }
  ],
