--- a/LF_lastminute/Lastminute.com Group - DataLab Demo.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo.ipynb
@@ -596,9 +596,14 @@
     "  KeywordMatchType,\n",
     "  AccountDescriptiveName,\n",
     "  CampaignName,\n",
-    "  AdGroupName\n",
+    "  AdGroupName,\n",
     "  IF(CriteriaDestinationUrl != ' --',CriteriaDestinationUrl,FinalUrls) as Urls,\n",
+    "  AVG(QualityScore) as AprilQualityScore,\n",
+    "  SUM(Impressions) as Impressions,\n",
     "  SUM(Clicks) as Clicks,\n",
+    "  SUM(Cost)/1000000 as Cost,\n",
+    "  SUM(AllConversions) as AllConversions\n",
+    "  SUM(Cost)/1000000/SUM(AllConversions) as CostPerAllConversion\n",
     "FROM\n",
     " [google.com:ddm-connectors-demo:aw_dataset.KEYWORDS_PERFORMANCE_ANALYTICS]\n",
     "WHERE True\n",
@@ -606,6 +611,7 @@
     "AND NOT IsNegative \n",
     "AND Status = 'enabled' AND AdGroupStatus = 'enabled' AND CampaignStatus = 'enabled'\n",
     "AND Month = '2016-04-01'\n",
+    "AND Criteria = 'bravo fly' AND \n",
     "GROUP BY 1,2,3,4"
    ]
   }
