--- a/LF_lastminute/Lastminute.com Group - DataLab Demo.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo.ipynb
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
@@ -183,6 +183,7 @@
     "SELECT\n",
     "  Criteria,\n",
     "  KeywordMatchType,\n",
+    "  Urls,\n",
     "  COUNT(AccountDescriptiveName) as NbOfAccounts,\n",
     "  SUM(IF(Clicks > 0,1,0)) as NbOfAccountsWithClicks,\n",
     "FROM\n",
@@ -202,12 +203,12 @@
     "AND Month = '2016-04-01'\n",
     "GROUP BY 1,2,3,4\n",
     ")\n",
-    "GROUP BY 1,2"
+    "GROUP BY 1,2,3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -584,11 +585,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div class=\"bqtv\" id=\"9_146436103534\"><table><tr><th>Criteria</th><th>KeywordMatchType</th><th>AccountDescriptiveName</th><th>CampaignName</th><th>AdGroupName</th><th>Urls</th><th>AprilQualityScore</th><th>Impressions</th><th>Clicks</th><th>Cost</th><th>AllConversions</th><th>CostPerAllConversion</th></tr><tr><td>bravo fly</td><td>Exact</td><td>BravoFly.com</td><td>Brand Bulgaria Exact</td><td>Brand Mssp</td><td>[\"http://www.bravofly.com/vg1/flights.do?COBRANDED=GMADWORDCOM\"]</td><td>10.0</td><td>3</td><td>1</td><td>0.01</td><td>0.0</td><td>&nbsp;</td></tr><tr><td>bravo fly</td><td>Exact</td><td>Bravofly Spagna</td><td>Brand Exact</td><td>Brand Misspellings</td><td>[\"http://www.bravofly.es/vg1/vuelos.do?COBRANDED=BFADWORDES\"]</td><td>8.0</td><td>83</td><td>37</td><td>2.12</td><td>13.0</td><td>0.163076923077</td></tr><tr><td>bravo fly</td><td>Exact</td><td>BravoFly.com</td><td>Brand Ungheria - Exact</td><td>Brand Mssp</td><td>[\"http://www.bravofly.hu?COBRANDED=GMADWORDHU\"]</td><td>10.0</td><td>93</td><td>53</td><td>0.55</td><td>3.0</td><td>0.183333333333</td></tr><tr><td>bravo fly</td><td>Exact</td><td>Svizzera Italia</td><td>Brand Exact</td><td>Bravofly Exact</td><td>[\"http://it.bravofly.ch/vg1/home.do?COBRANDED=GMADWORDCHI\"]</td><td>10.0</td><td>37</td><td>19</td><td>0.26</td><td>0.0</td><td>&nbsp;</td></tr><tr><td>bravo fly</td><td>Exact</td><td>Bravofly COM ROW</td><td>Brand Exact</td><td>Brand</td><td>[\"http://www.bravofly.com/vg1/flights.do?COBRANDED=GMADWORDCOM\"]</td><td>10.0</td><td>358</td><td>137</td><td>3.39</td><td>4.0</td><td>0.8475</td></tr><tr><td>bravo fly</td><td>Exact</td><td>BravoFly.com</td><td>Brand Croazia Exact</td><td>Brand Mssp</td><td>[\"http://www.bravofly.com?COBRANDED=GMADWORDCOM\"]</td><td>8.0</td><td>27</td><td>13</td><td>0.14</td><td>1.0</td><td>0.14</td></tr><tr><td>bravo fly</td><td>Exact</td><td>Bravofly Austria</td><td>Brand Exact</td><td>Bravofly Misspellings</td><td>[\"http://www.bravofly.at/vg1/home.do?COBRANDED=GMADWORDA\"]</td><td>10.0</td><td>50</td><td>21</td><td>0.27</td><td>2.0</td><td>0.135</td></tr><tr><td>bravo fly</td><td>Exact</td><td>BravoFly.com</td><td>Brand SK Exact</td><td>Brand Mssp</td><td>[\"http://www.bravofly.com?COBRANDED=GMADWORDCOM\"]</td><td>8.0</td><td>4</td><td>3</td><td>0.03</td><td>0.0</td><td>&nbsp;</td></tr><tr><td>bravo fly</td><td>Exact</td><td>BravoFly.com</td><td>Brand Netherlands Exact</td><td>Brand Mssp</td><td>[\"http://www.bravofly.com/vg1/flights.do?COBRANDED=GMADWORDCOM\"]</td><td>10.0</td><td>59</td><td>23</td><td>0.23</td><td>3.0</td><td>0.0766666666667</td></tr><tr><td>bravo fly</td><td>Exact</td><td>BravoFly DE</td><td>Brand Exact ROW</td><td>Brand Misspellings</td><td>[\"http://www.bravofly.de/vg1/flug.do?COBRANDED=GMADWORDDE&amp;sembox_content=[{KeyWord:Brand%20Misspellings}]\"]</td><td>10.0</td><td>42</td><td>12</td><td>1.5</td><td>1.0</td><td>1.5</td></tr><tr><td>bravo fly</td><td>Exact</td><td>BravoFly.com</td><td>Brand Singapore Exact</td><td>Brand Mssp</td><td>[\"http://www.bravofly.com.sg/?COBRANDED=GMADWORDSG\"]</td><td>10.0</td><td>34</td><td>11</td><td>0.28</td><td>0.0</td><td>&nbsp;</td></tr><tr><td>bravo fly</td><td>Exact</td><td>BravoFly.com</td><td>Brand Finlandia - Exact</td><td>Brand Mssp</td><td>[\"http://www.bravofly.fi/vg1/home.do?COBRANDED=GMADWORDFI\"]</td><td>10.0</td><td>39</td><td>29</td><td>0.43</td><td>2.0</td><td>0.215</td></tr><tr><td>bravo fly</td><td>Exact</td><td>BravoFly DK+SE</td><td>Brand Svezia</td><td>Brand Mssp</td><td>[\"http://www.bravofly.se/vg1/home.do?COBRANDED=GMADWORDSE\"]</td><td>10.0</td><td>178</td><td>86</td><td>2.22</td><td>7.0</td><td>0.317142857143</td></tr><tr><td>bravo fly</td><td>Exact</td><td>BravoFly.com</td><td>Brand Rep. Ceca Exact</td><td>Brand Mssp</td><td>[\"http://www.bravofly.cz/vg1/home.do?COBRANDED=GMADWORDCZ\"]</td><td>8.0</td><td>12</td><td>6</td><td>0.31</td><td>0.0</td><td>&nbsp;</td></tr><tr><td>bravo fly</td><td>Exact</td><td>BravoFly.com</td><td>Brand | AR Exact</td><td>Brand Mssp</td><td>[\"http://www.bravofly.com/vg1/flights.do?COBRANDED=GMADWORDCOM\"]</td><td>9.0</td><td>170</td><td>45</td><td>2.72</td><td>1.0</td><td>2.72</td></tr><tr><td>bravo fly</td><td>Exact</td><td>BravoFly.com</td><td>Brand Romania Exact</td><td>Brand Mssp</td><td>[\"http://www.bravofly.ro/vg1/home.do?COBRANDED=GMADWORDRO\"]</td><td>10.0</td><td>70</td><td>38</td><td>0.44</td><td>0.0</td><td>&nbsp;</td></tr><tr><td>bravo fly</td><td>Exact</td><td>BravoFly.com</td><td>Brand IE - Exact</td><td>Brand Mssp</td><td>[\"http://www.bravofly.com/vg1/flights.do?COBRANDED=GMADWORDCOM\"]</td><td>10.0</td><td>52</td><td>25</td><td>1.03</td><td>4.0</td><td>0.2575</td></tr><tr><td>bravo fly</td><td>Exact</td><td>BravoFly DK+SE</td><td>Brand Danimarca</td><td>Brand Mssp</td><td>[\"http://www.bravofly.dk/vg1/home.do?COBRANDED=GMADWORDDK\"]</td><td>8.0</td><td>130</td><td>64</td><td>1.12</td><td>1.0</td><td>1.12</td></tr><tr><td>bravo fly</td><td>Exact</td><td>BravoFly.com</td><td>Brand Islanda Exact</td><td>Brand Mssp</td><td>[\"http://www.bravofly.com?COBRANDED=GMADWORDCOM\"]</td><td>8.0</td><td>1</td><td>1</td><td>0.01</td><td>0.0</td><td>&nbsp;</td></tr><tr><td>bravo fly</td><td>Exact</td><td>BravoFly.com</td><td>Brand Indonesia Exact</td><td>Brand Mssp</td><td>[\"http://www.bravofly.co.id/vg1/home.do?COBRANDED=GMADWORDID\"]</td><td>9.0</td><td>36</td><td>17</td><td>3.1</td><td>0.0</td><td>&nbsp;</td></tr><tr><td>bravo fly</td><td>Exact</td><td>BravoFly DE</td><td>Brand Exact</td><td>Brand Misspellings</td><td>[\"http://www.bravofly.de/vg1/flug.do?{ifnotmobile:COBRANDED=GMADWORDDE}&amp;{ifnotmobile:sembox_content=[{KeyWord:Brand%20Misspellings}]}&amp;{ifmobile:ds_dest_url=http%3A%2F%2Fwww.bravofly.de%2Fvg1%2Fflug.do%3FCOBRANDED%3dADWORDIPHONEDE%26sembox_content%3d[{KeyWord:Brand%20Misspellings}]}\"]</td><td>10.0</td><td>626</td><td>338</td><td>17.0</td><td>10.0</td><td>1.7</td></tr><tr><td>bravo fly</td><td>Exact</td><td>Svizzera Germania</td><td>Brand Exact</td><td>Bravofly Misspellings</td><td>[\"http://de.bravofly.ch/vg1/home.do?COBRANDED=GMADWORDCHD\"]</td><td>10.0</td><td>78</td><td>44</td><td>1.9</td><td>0.0</td><td>&nbsp;</td></tr><tr><td>bravo fly</td><td>Exact</td><td>BravoFly UK</td><td>Brand UK - Exact</td><td>Brand</td><td>[\"http://www.bravofly.co.uk?COBRANDED=BFADWORDCOUK\"]</td><td>10.0</td><td>1172</td><td>584</td><td>100.74</td><td>14.0</td><td>7.19571428571</td></tr><tr><td>bravo fly</td><td>Exact</td><td>BravoFly.com</td><td>Brand Turchia Exact</td><td>Brand Mssp</td><td>[\"http://www.bravofly.com.tr/vg1/home.do?COBRANDED=GMADWORDTR\"]</td><td>10.0</td><td>63</td><td>28</td><td>0.83</td><td>0.0</td><td>&nbsp;</td></tr><tr><td>bravo fly</td><td>Exact</td><td>Bravofly USA (new)</td><td>Brand Australia Exact</td><td>Brand</td><td>[\"http://www.bravofly.com.au/vg1/home.do?COBRANDED=GMADWORDAU\"]</td><td>10.0</td><td>328</td><td>151</td><td>9.22</td><td>13.0</td><td>0.709230769231</td></tr></table></div>\n",
+       "    <br />(rows: 33, time: 3.2s,    93GB processed, job: job_b8qL6spfRqhgRLBaoebA5YgUvL4)<br />\n",
+       "    <script>\n",
+       "      require(['extensions/charting', 'element!9_146436103534', 'style!/static/extensions/charting.css'],\n",
+       "        function(charts, dom) {\n",
+       "          charts.render(dom,\n",
+       "            {\n",
+       "              chartStyle:\"paged_table\",\n",
+       "              dataName:\"7\",\n",
+       "              fields:\"Criteria,KeywordMatchType,AccountDescriptiveName,CampaignName,AdGroupName,Urls,AprilQualityScore,Impressions,Clicks,Cost,AllConversions,CostPerAllConversion\",\n",
+       "              totalRows:33,\n",
+       "              rowsPerPage:25,\n",
+       "            }, {}, {\"rows\": [{\"c\": [{\"v\": \"bravo fly\"}, {\"v\": \"Exact\"}, {\"v\": \"BravoFly.com\"}, {\"v\": \"Brand Bulgaria Exact\"}, {\"v\": \"Brand Mssp\"}, {\"v\": \"[\\\"http://www.bravofly.com/vg1/flights.do?COBRANDED=GMADWORDCOM\\\"]\"}, {\"v\": 10.0}, {\"v\": 3}, {\"v\": 1}, {\"v\": 0.01}, {\"v\": 0.0}, {\"v\": null}]}, {\"c\": [{\"v\": \"bravo fly\"}, {\"v\": \"Exact\"}, {\"v\": \"Bravofly Spagna\"}, {\"v\": \"Brand Exact\"}, {\"v\": \"Brand Misspellings\"}, {\"v\": \"[\\\"http://www.bravofly.es/vg1/vuelos.do?COBRANDED=BFADWORDES\\\"]\"}, {\"v\": 8.0}, {\"v\": 83}, {\"v\": 37}, {\"v\": 2.12}, {\"v\": 13.0}, {\"v\": 0.16307692307692306}]}, {\"c\": [{\"v\": \"bravo fly\"}, {\"v\": \"Exact\"}, {\"v\": \"BravoFly.com\"}, {\"v\": \"Brand Ungheria - Exact\"}, {\"v\": \"Brand Mssp\"}, {\"v\": \"[\\\"http://www.bravofly.hu?COBRANDED=GMADWORDHU\\\"]\"}, {\"v\": 10.0}, {\"v\": 93}, {\"v\": 53}, {\"v\": 0.55}, {\"v\": 3.0}, {\"v\": 0.18333333333333335}]}, {\"c\": [{\"v\": \"bravo fly\"}, {\"v\": \"Exact\"}, {\"v\": \"Svizzera Italia\"}, {\"v\": \"Brand Exact\"}, {\"v\": \"Bravofly Exact\"}, {\"v\": \"[\\\"http://it.bravofly.ch/vg1/home.do?COBRANDED=GMADWORDCHI\\\"]\"}, {\"v\": 10.0}, {\"v\": 37}, {\"v\": 19}, {\"v\": 0.26}, {\"v\": 0.0}, {\"v\": null}]}, {\"c\": [{\"v\": \"bravo fly\"}, {\"v\": \"Exact\"}, {\"v\": \"Bravofly COM ROW\"}, {\"v\": \"Brand Exact\"}, {\"v\": \"Brand\"}, {\"v\": \"[\\\"http://www.bravofly.com/vg1/flights.do?COBRANDED=GMADWORDCOM\\\"]\"}, {\"v\": 10.0}, {\"v\": 358}, {\"v\": 137}, {\"v\": 3.39}, {\"v\": 4.0}, {\"v\": 0.8475}]}, {\"c\": [{\"v\": \"bravo fly\"}, {\"v\": \"Exact\"}, {\"v\": \"BravoFly.com\"}, {\"v\": \"Brand Croazia Exact\"}, {\"v\": \"Brand Mssp\"}, {\"v\": \"[\\\"http://www.bravofly.com?COBRANDED=GMADWORDCOM\\\"]\"}, {\"v\": 8.0}, {\"v\": 27}, {\"v\": 13}, {\"v\": 0.14}, {\"v\": 1.0}, {\"v\": 0.14}]}, {\"c\": [{\"v\": \"bravo fly\"}, {\"v\": \"Exact\"}, {\"v\": \"Bravofly Austria\"}, {\"v\": \"Brand Exact\"}, {\"v\": \"Bravofly Misspellings\"}, {\"v\": \"[\\\"http://www.bravofly.at/vg1/home.do?COBRANDED=GMADWORDA\\\"]\"}, {\"v\": 10.0}, {\"v\": 50}, {\"v\": 21}, {\"v\": 0.27}, {\"v\": 2.0}, {\"v\": 0.135}]}, {\"c\": [{\"v\": \"bravo fly\"}, {\"v\": \"Exact\"}, {\"v\": \"BravoFly.com\"}, {\"v\": \"Brand SK Exact\"}, {\"v\": \"Brand Mssp\"}, {\"v\": \"[\\\"http://www.bravofly.com?COBRANDED=GMADWORDCOM\\\"]\"}, {\"v\": 8.0}, {\"v\": 4}, {\"v\": 3}, {\"v\": 0.03}, {\"v\": 0.0}, {\"v\": null}]}, {\"c\": [{\"v\": \"bravo fly\"}, {\"v\": \"Exact\"}, {\"v\": \"BravoFly.com\"}, {\"v\": \"Brand Netherlands Exact\"}, {\"v\": \"Brand Mssp\"}, {\"v\": \"[\\\"http://www.bravofly.com/vg1/flights.do?COBRANDED=GMADWORDCOM\\\"]\"}, {\"v\": 10.0}, {\"v\": 59}, {\"v\": 23}, {\"v\": 0.23}, {\"v\": 3.0}, {\"v\": 0.07666666666666667}]}, {\"c\": [{\"v\": \"bravo fly\"}, {\"v\": \"Exact\"}, {\"v\": \"BravoFly DE\"}, {\"v\": \"Brand Exact ROW\"}, {\"v\": \"Brand Misspellings\"}, {\"v\": \"[\\\"http://www.bravofly.de/vg1/flug.do?COBRANDED=GMADWORDDE&sembox_content=[{KeyWord:Brand%20Misspellings}]\\\"]\"}, {\"v\": 10.0}, {\"v\": 42}, {\"v\": 12}, {\"v\": 1.5}, {\"v\": 1.0}, {\"v\": 1.5}]}, {\"c\": [{\"v\": \"bravo fly\"}, {\"v\": \"Exact\"}, {\"v\": \"BravoFly.com\"}, {\"v\": \"Brand Singapore Exact\"}, {\"v\": \"Brand Mssp\"}, {\"v\": \"[\\\"http://www.bravofly.com.sg/?COBRANDED=GMADWORDSG\\\"]\"}, {\"v\": 10.0}, {\"v\": 34}, {\"v\": 11}, {\"v\": 0.28}, {\"v\": 0.0}, {\"v\": null}]}, {\"c\": [{\"v\": \"bravo fly\"}, {\"v\": \"Exact\"}, {\"v\": \"BravoFly.com\"}, {\"v\": \"Brand Finlandia - Exact\"}, {\"v\": \"Brand Mssp\"}, {\"v\": \"[\\\"http://www.bravofly.fi/vg1/home.do?COBRANDED=GMADWORDFI\\\"]\"}, {\"v\": 10.0}, {\"v\": 39}, {\"v\": 29}, {\"v\": 0.43}, {\"v\": 2.0}, {\"v\": 0.215}]}, {\"c\": [{\"v\": \"bravo fly\"}, {\"v\": \"Exact\"}, {\"v\": \"BravoFly DK+SE\"}, {\"v\": \"Brand Svezia\"}, {\"v\": \"Brand Mssp\"}, {\"v\": \"[\\\"http://www.bravofly.se/vg1/home.do?COBRANDED=GMADWORDSE\\\"]\"}, {\"v\": 10.0}, {\"v\": 178}, {\"v\": 86}, {\"v\": 2.22}, {\"v\": 7.0}, {\"v\": 0.31714285714285717}]}, {\"c\": [{\"v\": \"bravo fly\"}, {\"v\": \"Exact\"}, {\"v\": \"BravoFly.com\"}, {\"v\": \"Brand Rep. Ceca Exact\"}, {\"v\": \"Brand Mssp\"}, {\"v\": \"[\\\"http://www.bravofly.cz/vg1/home.do?COBRANDED=GMADWORDCZ\\\"]\"}, {\"v\": 8.0}, {\"v\": 12}, {\"v\": 6}, {\"v\": 0.31}, {\"v\": 0.0}, {\"v\": null}]}, {\"c\": [{\"v\": \"bravo fly\"}, {\"v\": \"Exact\"}, {\"v\": \"BravoFly.com\"}, {\"v\": \"Brand | AR Exact\"}, {\"v\": \"Brand Mssp\"}, {\"v\": \"[\\\"http://www.bravofly.com/vg1/flights.do?COBRANDED=GMADWORDCOM\\\"]\"}, {\"v\": 9.0}, {\"v\": 170}, {\"v\": 45}, {\"v\": 2.72}, {\"v\": 1.0}, {\"v\": 2.72}]}, {\"c\": [{\"v\": \"bravo fly\"}, {\"v\": \"Exact\"}, {\"v\": \"BravoFly.com\"}, {\"v\": \"Brand Romania Exact\"}, {\"v\": \"Brand Mssp\"}, {\"v\": \"[\\\"http://www.bravofly.ro/vg1/home.do?COBRANDED=GMADWORDRO\\\"]\"}, {\"v\": 10.0}, {\"v\": 70}, {\"v\": 38}, {\"v\": 0.44}, {\"v\": 0.0}, {\"v\": null}]}, {\"c\": [{\"v\": \"bravo fly\"}, {\"v\": \"Exact\"}, {\"v\": \"BravoFly.com\"}, {\"v\": \"Brand IE - Exact\"}, {\"v\": \"Brand Mssp\"}, {\"v\": \"[\\\"http://www.bravofly.com/vg1/flights.do?COBRANDED=GMADWORDCOM\\\"]\"}, {\"v\": 10.0}, {\"v\": 52}, {\"v\": 25}, {\"v\": 1.03}, {\"v\": 4.0}, {\"v\": 0.2575}]}, {\"c\": [{\"v\": \"bravo fly\"}, {\"v\": \"Exact\"}, {\"v\": \"BravoFly DK+SE\"}, {\"v\": \"Brand Danimarca\"}, {\"v\": \"Brand Mssp\"}, {\"v\": \"[\\\"http://www.bravofly.dk/vg1/home.do?COBRANDED=GMADWORDDK\\\"]\"}, {\"v\": 8.0}, {\"v\": 130}, {\"v\": 64}, {\"v\": 1.12}, {\"v\": 1.0}, {\"v\": 1.12}]}, {\"c\": [{\"v\": \"bravo fly\"}, {\"v\": \"Exact\"}, {\"v\": \"BravoFly.com\"}, {\"v\": \"Brand Islanda Exact\"}, {\"v\": \"Brand Mssp\"}, {\"v\": \"[\\\"http://www.bravofly.com?COBRANDED=GMADWORDCOM\\\"]\"}, {\"v\": 8.0}, {\"v\": 1}, {\"v\": 1}, {\"v\": 0.01}, {\"v\": 0.0}, {\"v\": null}]}, {\"c\": [{\"v\": \"bravo fly\"}, {\"v\": \"Exact\"}, {\"v\": \"BravoFly.com\"}, {\"v\": \"Brand Indonesia Exact\"}, {\"v\": \"Brand Mssp\"}, {\"v\": \"[\\\"http://www.bravofly.co.id/vg1/home.do?COBRANDED=GMADWORDID\\\"]\"}, {\"v\": 9.0}, {\"v\": 36}, {\"v\": 17}, {\"v\": 3.1}, {\"v\": 0.0}, {\"v\": null}]}, {\"c\": [{\"v\": \"bravo fly\"}, {\"v\": \"Exact\"}, {\"v\": \"BravoFly DE\"}, {\"v\": \"Brand Exact\"}, {\"v\": \"Brand Misspellings\"}, {\"v\": \"[\\\"http://www.bravofly.de/vg1/flug.do?{ifnotmobile:COBRANDED=GMADWORDDE}&{ifnotmobile:sembox_content=[{KeyWord:Brand%20Misspellings}]}&{ifmobile:ds_dest_url=http%3A%2F%2Fwww.bravofly.de%2Fvg1%2Fflug.do%3FCOBRANDED%3dADWORDIPHONEDE%26sembox_content%3d[{KeyWord:Brand%20Misspellings}]}\\\"]\"}, {\"v\": 10.0}, {\"v\": 626}, {\"v\": 338}, {\"v\": 17.0}, {\"v\": 10.0}, {\"v\": 1.7}]}, {\"c\": [{\"v\": \"bravo fly\"}, {\"v\": \"Exact\"}, {\"v\": \"Svizzera Germania\"}, {\"v\": \"Brand Exact\"}, {\"v\": \"Bravofly Misspellings\"}, {\"v\": \"[\\\"http://de.bravofly.ch/vg1/home.do?COBRANDED=GMADWORDCHD\\\"]\"}, {\"v\": 10.0}, {\"v\": 78}, {\"v\": 44}, {\"v\": 1.9}, {\"v\": 0.0}, {\"v\": null}]}, {\"c\": [{\"v\": \"bravo fly\"}, {\"v\": \"Exact\"}, {\"v\": \"BravoFly UK\"}, {\"v\": \"Brand UK - Exact\"}, {\"v\": \"Brand\"}, {\"v\": \"[\\\"http://www.bravofly.co.uk?COBRANDED=BFADWORDCOUK\\\"]\"}, {\"v\": 10.0}, {\"v\": 1172}, {\"v\": 584}, {\"v\": 100.74}, {\"v\": 14.0}, {\"v\": 7.195714285714286}]}, {\"c\": [{\"v\": \"bravo fly\"}, {\"v\": \"Exact\"}, {\"v\": \"BravoFly.com\"}, {\"v\": \"Brand Turchia Exact\"}, {\"v\": \"Brand Mssp\"}, {\"v\": \"[\\\"http://www.bravofly.com.tr/vg1/home.do?COBRANDED=GMADWORDTR\\\"]\"}, {\"v\": 10.0}, {\"v\": 63}, {\"v\": 28}, {\"v\": 0.83}, {\"v\": 0.0}, {\"v\": null}]}, {\"c\": [{\"v\": \"bravo fly\"}, {\"v\": \"Exact\"}, {\"v\": \"Bravofly USA (new)\"}, {\"v\": \"Brand Australia Exact\"}, {\"v\": \"Brand\"}, {\"v\": \"[\\\"http://www.bravofly.com.au/vg1/home.do?COBRANDED=GMADWORDAU\\\"]\"}, {\"v\": 10.0}, {\"v\": 328}, {\"v\": 151}, {\"v\": 9.22}, {\"v\": 13.0}, {\"v\": 0.7092307692307692}]}], \"cols\": [{\"type\": \"string\", \"id\": \"Criteria\", \"label\": \"Criteria\"}, {\"type\": \"string\", \"id\": \"KeywordMatchType\", \"label\": \"KeywordMatchType\"}, {\"type\": \"string\", \"id\": \"AccountDescriptiveName\", \"label\": \"AccountDescriptiveName\"}, {\"type\": \"string\", \"id\": \"CampaignName\", \"label\": \"CampaignName\"}, {\"type\": \"string\", \"id\": \"AdGroupName\", \"label\": \"AdGroupName\"}, {\"type\": \"string\", \"id\": \"Urls\", \"label\": \"Urls\"}, {\"type\": \"number\", \"id\": \"AprilQualityScore\", \"label\": \"AprilQualityScore\"}, {\"type\": \"number\", \"id\": \"Impressions\", \"label\": \"Impressions\"}, {\"type\": \"number\", \"id\": \"Clicks\", \"label\": \"Clicks\"}, {\"type\": \"number\", \"id\": \"Cost\", \"label\": \"Cost\"}, {\"type\": \"number\", \"id\": \"AllConversions\", \"label\": \"AllConversions\"}, {\"type\": \"number\", \"id\": \"CostPerAllConversion\", \"label\": \"CostPerAllConversion\"}]});\n",
+       "        }\n",
+       "      );\n",
+       "    </script>\n",
+       "  "
+      ],
+      "text/plain": [
+       "QueryResultsTable job_b8qL6spfRqhgRLBaoebA5YgUvL4"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%sql\n",
     "SELECT\n",
@@ -602,8 +634,8 @@
     "  SUM(Impressions) as Impressions,\n",
     "  SUM(Clicks) as Clicks,\n",
     "  SUM(Cost)/1000000 as Cost,\n",
-    "  SUM(AllConversions) as AllConversions\n",
-    "  SUM(Cost)/1000000/SUM(AllConversions) as CostPerAllConversion\n",
+    "  SUM(AllConversions) as AllConversions,\n",
+    "  SUM(Cost)/SUM(AllConversions)/1000000 as CostPerAllConversion\n",
     "FROM\n",
     " [google.com:ddm-connectors-demo:aw_dataset.KEYWORDS_PERFORMANCE_ANALYTICS]\n",
     "WHERE True\n",
@@ -611,9 +643,18 @@
     "AND NOT IsNegative \n",
     "AND Status = 'enabled' AND AdGroupStatus = 'enabled' AND CampaignStatus = 'enabled'\n",
     "AND Month = '2016-04-01'\n",
-    "AND Criteria = 'bravo fly' AND \n",
-    "GROUP BY 1,2,3,4"
+    "AND Criteria = 'bravo fly' AND KeywordMatchType = 'Exact'\n",
+    "GROUP BY 1,2,3,4,5,6"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
